content for kitchen

--- a/_posts/2018-12-22-kitchen.html
+++ b/_posts/2018-12-22-kitchen.html
@@ -81,10 +81,10 @@ permalink: /kitchen/post.html
     <div class="cell small-12 medium-6 large-6 speech-container voice-kepler">
       <div class="speech">
         <p>
-          Our kitchen smells of old softwood covered by what is now paper pulp but may have once been a more substantial layer between wood and tile, the remnants of early formaldehyde-ridden particle board, and the insides of walls that haven’t been exposed to light and air for almost 100 years. Also in the mix is the familiar pine framing that sat on our garage floor in a pile where I had to stumble over it every time I put away or retrieved Max, my folding bike. The morning light now beams freely through the kitchen window into the dining room since the wall was taken down between the two spaces. On its way, it scratches over protruding corners of fiberglass rolls, splintering ends of dimensional lumber, and masonry rubble. Em had a vision of how the natural light would flow before we started. Once demolition was complete, she stood where the wall once was and was satisfied to see the vision realized. The internal systems of our house are mostly visible in the kitchen: old iron pipes with corrosion spilling out of the joints, plumbing traps from the second floor bathroom above, capped stubs of new copper water supply lines, snipped old electrical cables, new red and blue flexible plastic arteries and veins.
+          Jay and a bunch of other people are making a lot of noise and trying to keep me out of my sunning spot. I've been leaving them some presents, but they haven't gotten the hint.
         </p>
         <p>
-          Somebody drew a waterfowl on a piece of the framing. I am not sure who it was or why this was done, but I appreciate it. One day, someone else will take down the wall and discover it. I hope that person will be amused. When Em came to visit me in the Netherlands, there was a bench with swan sculptures on the side of it. The bench was secured in place with chains, and Em made a comment that nobody would swander off with it.
+          <img data-interchange="[{{ site.baseurl }}/img/turd_u7dgze/turd_u7dgze_c_scale,w_622.jpg, small], [{{ site.baseurl }}/img/turd_u7dgze/turd_u7dgze_c_scale,w_856.jpg, medium], [{{ site.baseurl }}/img/turd_u7dgze/turd_u7dgze_c_scale,w_1061.jpg, large]" >
         </p>
       </div>
       {% include attribution-kepler.html %}
@@ -92,9 +92,50 @@ permalink: /kitchen/post.html
     <div class="cell small-12 medium-6 large-6 speech-container voice-emandm">
       <div class="speech">
         <p>
+          Our kitchen smells of old softwood covered by what is now paper pulp but may have once been a more substantial layer between wood and tile, the remnants of early formaldehyde-ridden particle board, and the insides of walls that haven’t been exposed to light and air for almost 100 years. Also in the mix is the familiar pine framing that sat on our garage floor in a pile where I had to stumble over it every time I put away or retrieved Max, my folding bike. The morning light now beams freely through the kitchen window into the dining room since the wall was taken down between the two spaces. On its way, it scratches over protruding corners of fiberglass rolls, splintering ends of dimensional lumber, and masonry rubble. Em had a vision of how the natural light would flow before we started. Once demolition was complete, she stood where the wall once was and was satisfied to see the vision realized. The internal systems of our house are mostly visible in the kitchen: old iron pipes with corrosion spilling out of the joints, plumbing traps from the second floor bathroom above, capped stubs of new copper water supply lines, snipped old electrical cables, new red and blue flexible plastic arteries and veins.
+        </p>
+        <p>
+          <img data-interchange="[{{ site.baseurl }}/img/construction-em-stove_cuzliq/construction-em-stove_cuzliq_c_scale,w_653.jpg, small], [{{ site.baseurl }}/img/construction-em-stove_cuzliq/construction-em-stove_cuzliq_c_scale,w_907.jpg, medium], [{{ site.baseurl }}/img/construction-em-stove_cuzliq/construction-em-stove_cuzliq_c_scale,w_1107.jpg, large]" >
+        </p>
+        <p>
+          Somebody drew a waterfowl on a piece of the framing. I am not sure who it was or why this was done, but I appreciate it. One day, someone else will take down the wall and discover it. I hope that person will be amused. When Em came to visit me in the Netherlands, there was a bench with swan sculptures on the side of it. The bench was secured in place with chains, and Em made a comment that nobody would swander off with it.
+        </p>
+        <p>
+          <img data-interchange="[{{ site.baseurl }}/img/construction-waterfowl_xzzkba/construction-waterfowl_xzzkba_c_scale,w_643.jpg, small], [{{ site.baseurl }}/img/construction-waterfowl_xzzkba/construction-waterfowl_xzzkba_c_scale,w_877.jpg, medium], [{{ site.baseurl }}/img/construction-waterfowl_xzzkba/construction-waterfowl_xzzkba_c_scale,w_1064.jpg, large]" >
+        </p>
+        <p>
           This is the first big project we’re doing with the inheritance from my late Grandma Rice. We realized as we were going through her old yearbook that her friends called her Spigot (or Spiggott) since her last name at the time was Fawcett. It also seemed that one friend filled in an entire page of her yearbook. Seeing that yearbook revealed a side of her that I never knew. I remember her as chatty, full of energy and optimistic, but also somewhat proper. She got dressed up and went to her Presbyterian church every Sunday. Even in her last years, she and her friends in her retirement home got dressed up quite fancy to go to dinner with each other. I had a hard time imagining anyone calling her Spiggott. During our search for a new kitchen faucet, I thought of her often.
         </p>
+        <p>
+          <a data-open="grandma-yearbook">
+            <img data-interchange="[{{ site.baseurl }}/img/grandma-yearbook_e3mrtj/grandma-yearbook_e3mrtj_c_scale,w_599.jpg, small], [{{ site.baseurl }}/img/grandma-yearbook_e3mrtj/grandma-yearbook_e3mrtj_c_scale,w_749.jpg, medium], [{{ site.baseurl }}/img/grandma-yearbook_e3mrtj/grandma-yearbook_e3mrtj_c_scale,w_1080.jpg, large]" >
+          </a>
+        </p>
+        <p>
+          Em says I am living my tiny house dreams with our temporary kitchen setup. I asked Em if we could keep it after the kitchen project was done. I was actually surprised at how excited I got about the temporary kitchen. I’ve had a dream for a long time of living in a tiny house that’s energy efficient, simple to maintain, and requires cleverness (and reducing possessions) to use the space well. We had to apply some cleverness in order to get by with about half of the first floor of our house empty and under construction. For now we shoved a bunch of dishes and rarely-used kitchen appliances into the guest bedroom, and we converted the office into a temporary kitchen and dining area with an alcohol-burning camping stove (which I use somewhat often but I think Em has yet to use), a microwave, a toaster oven, and a rice cooker. We have a perfect nook for the old fridge (we’ll have to get a new, smaller fridge when the renovation is complete) between the bookshelf and the sofa. That nook didn’t have a good use anyway - it just became a storage zone. Access to some of the books is blocked, and the exposed part of the bookshelf is now doing double duty as a pantry shelf. One nice part of this arrangement is that we are spending more time with the fish (they are starting to bond more with Em, since she is giving them dried blood worms as snacks on a regular basis). Another benefit is that this room has great visibility on three sides, so we get to watch squirrels, our neighbors and cats walking down our street, and some action on the main street. The room is pretty small, but it is laid out well, so it doesn’t feel uncomfortable. The table and chairs fold (we had our friends, the Brohareks over for lunch here once, so we opened up the other leaf of the table to fit four comfortably). Much of the furniture makes pretty good use of vertical space with several levels of surfaces. The top of the microwave functions as overflow counter space.
+        </p>
+        <p>
+          <img data-interchange="[{{ site.baseurl }}/img/temp-kitchen-counter_itqr58/temp-kitchen-counter_itqr58_c_scale,w_614.jpg, small], [{{ site.baseurl }}/img/temp-kitchen-counter_itqr58/temp-kitchen-counter_itqr58_c_scale,w_850.jpg, medium], [{{ site.baseurl }}/img/temp-kitchen-counter_itqr58/temp-kitchen-counter_itqr58_c_scale,w_1062.jpg, large]" >
+        </p>
+        <p>
+          <img data-interchange="[{{ site.baseurl }}/img/temp-kitchen-ems-desk_h6qeqh/temp-kitchen-ems-desk_h6qeqh_c_scale,w_606.jpg, small], [{{ site.baseurl }}/img/temp-kitchen-ems-desk_h6qeqh/temp-kitchen-ems-desk_h6qeqh_c_scale,w_840.jpg, medium], [{{ site.baseurl }}/img/temp-kitchen-ems-desk_h6qeqh/temp-kitchen-ems-desk_h6qeqh_c_scale,w_1049.jpg, large]" >
+        </p>
+        <p>
+          We can cook just about everything we would want to here (I baked vegan brownies from scratch here once), but the reality is that we have been mostly eating frozen food from Trader Joe’s, take-out, and lots of bagels. We have only one stove burner, and it’s not easy to finely control the level of heat it produces. Also, we don’t have proper skillets at the moment - just non-stick aluminum camping pots, which are fine for simpler things, but they’re a smaller surface area and have high walls, so spatula access is a little more constrained. Proper skillets would probably not balance well on the camping stove. I’d make some modifications if we were going to have this setup for a long time.
+        </p>
+        <p>
+          We are using plastic busing bins (the kind you might find at a restaurant) to store dirty dishes in, and we wash them upstairs in the main bathroom, with a dish drying rack shoved between the two sinks. That process is more of a pain - I had thought it was silly to have two sinks there in the first place, and now it is definitely cramped. I am missing our dishwasher every day for the time (and energy) it saved.
+        </p>
+        <p>
+          <img data-interchange="[{{ site.baseurl }}/img/temp-kitchen-sink_zupbws/temp-kitchen-sink_zupbws_c_scale,w_649.jpg, small], [{{ site.baseurl }}/img/temp-kitchen-sink_zupbws/temp-kitchen-sink_zupbws_c_scale,w_896.jpg, medium], [{{ site.baseurl }}/img/temp-kitchen-sink_zupbws/temp-kitchen-sink_zupbws_c_scale,w_1099.jpg, large]" >
+        </p>
       </div>
-      {% include attribution-us.html %}
+      {% include attribution-m.html %}
     </div>
+</div>
+<div class="reveal" id="grandma-yearbook" data-reveal>
+  <img data-interchange="[{{ site.baseurl }}/img/grandma-yearbook_e3mrtj/grandma-yearbook_e3mrtj_c_scale,w_749.jpg, small], [{{ site.baseurl }}/img/grandma-yearbook_e3mrtj/grandma-yearbook_e3mrtj_c_scale,w_1080.jpg, medium], [{{ site.baseurl }}/img/grandma-yearbook_e3mrtj/grandma-yearbook_e3mrtj_c_scale,w_1080.jpg, large]" >
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
 </div>
