--- a/_posts/2018-12-23-porch.html
+++ b/_posts/2018-12-23-porch.html
@@ -69,7 +69,10 @@ permalink: /porch/post.html
           Before this project, it was a bit awkward to let people in the front door. It involved waving hello with the screen door shut, asking them to back down the stairs so that we could open the screen door, and then asking them to come back up the stairs to come inside. It made for a difficult Halloween or two - fortunately no small Power Rangers were injured. Now entering the front door is a lot more natural.
         </p>
         <p>
-          Also, Em described the front of the house before this project as a face without a nose. Our contractor, Jay now describes it as the best looking nose on the street.
+          Em described the front of the house before this project as a face without a nose. Our contractor, Jay now describes it as the best looking nose on the street.
+        </p>
+        <p>
+          Em dreams of a southern-inspired porch that wraps around multiple sides of the house. Mike loves tiny houses. Now we have a tiny front porch.
         </p>
       </div>
       {% include attribution-us.html %}
