--- a/_posts/2018-12-21-beard.html
+++ b/_posts/2018-12-21-beard.html
@@ -49,10 +49,7 @@ permalink: /beard/post.html
     <div class="cell small-12 medium-6 large-6 speech-container voice-kepler">
       <div class="speech">
         <p>
-          Our kitchen smells of old softwood covered by what is now paper pulp but may have once been a more substantial layer between wood and tile, the remnants of early formaldehyde-ridden particle board, and the insides of walls that haven’t been exposed to light and air for almost 100 years. Also in the mix is the familiar pine framing that sat on our garage floor in a pile where I had to stumble over it every time I put away or retrieved Max, my folding bike. The morning light now beams freely through the kitchen window into the dining room since the wall was taken down between the two spaces. On its way, it scratches over protruding corners of fiberglass rolls, splintering ends of dimensional lumber, and masonry rubble. Em had a vision of how the natural light would flow before we started. Once demolition was complete, she stood where the wall once was and was satisfied to see the vision realized. The internal systems of our house are mostly visible in the kitchen: old iron pipes with corrosion spilling out of the joints, plumbing traps from the second floor bathroom above, capped stubs of new copper water supply lines, snipped old electrical cables, new red and blue flexible plastic arteries and veins.
-        </p>
-        <p>
-          Somebody drew a waterfowl on a piece of the framing. I am not sure who it was or why this was done, but I appreciate it. One day, someone else will take down the wall and discover it. I hope that person will be amused. When Em came to visit me in the Netherlands, there was a bench with swan sculptures on the side of it. The bench was secured in place with chains, and Em made a comment that nobody would swander off with it.
+          meow
         </p>
       </div>
       {% include attribution-kepler.html %}
