content for beard and baby

--- a/_posts/2018-12-20-baby.html
+++ b/_posts/2018-12-20-baby.html
@@ -46,14 +46,17 @@ permalink: /baby/post.html
   </button>
 </div>
 <!--more-->
+<div class="reveal" id="baby" data-reveal>
+  <img data-interchange="[{{ site.baseurl }}/img/baby_xbjpew/baby_xbjpew_c_scale,w_634.jpg, small], [{{ site.baseurl }}/img/baby_xbjpew/baby_xbjpew_c_scale,w_959.jpg, medium], [{{ site.baseurl }}/img/baby_xbjpew/baby.jpg, large]" >
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 <div class="grid-x grid-margin-x more" id="speeches">
     <div class="cell small-12 medium-6 large-6 speech-container voice-kepler">
       <div class="speech">
         <p>
-          Our kitchen smells of old softwood covered by what is now paper pulp but may have once been a more substantial layer between wood and tile, the remnants of early formaldehyde-ridden particle board, and the insides of walls that haven’t been exposed to light and air for almost 100 years. Also in the mix is the familiar pine framing that sat on our garage floor in a pile where I had to stumble over it every time I put away or retrieved Max, my folding bike. The morning light now beams freely through the kitchen window into the dining room since the wall was taken down between the two spaces. On its way, it scratches over protruding corners of fiberglass rolls, splintering ends of dimensional lumber, and masonry rubble. Em had a vision of how the natural light would flow before we started. Once demolition was complete, she stood where the wall once was and was satisfied to see the vision realized. The internal systems of our house are mostly visible in the kitchen: old iron pipes with corrosion spilling out of the joints, plumbing traps from the second floor bathroom above, capped stubs of new copper water supply lines, snipped old electrical cables, new red and blue flexible plastic arteries and veins.
-        </p>
-        <p>
-          Somebody drew a waterfowl on a piece of the framing. I am not sure who it was or why this was done, but I appreciate it. One day, someone else will take down the wall and discover it. I hope that person will be amused. When Em came to visit me in the Netherlands, there was a bench with swan sculptures on the side of it. The bench was secured in place with chains, and Em made a comment that nobody would swander off with it.
+          There will be another human around soon, so I'll have someone else to boss around. I guess that will be all right.
         </p>
       </div>
       {% include attribution-kepler.html %}
@@ -61,7 +64,18 @@ permalink: /baby/post.html
     <div class="cell small-12 medium-6 large-6 speech-container voice-emandm">
       <div class="speech">
         <p>
-          This is the first big project we’re doing with the inheritance from my late Grandma Rice. We realized as we were going through her old yearbook that her friends called her Spigot (or Spiggott) since her last name at the time was Fawcett. It also seemed that one friend filled in an entire page of her yearbook. Seeing that yearbook revealed a side of her that I never knew. I remember her as chatty, full of energy and optimistic, but also somewhat proper. She got dressed up and went to her Presbyterian church every Sunday. Even in her last years, she and her friends in her retirement home got dressed up quite fancy to go to dinner with each other. I had a hard time imagining anyone calling her Spiggott. During our search for a new kitchen faucet, I thought of her often.
+          The two of us traded positions on opposite sides of whether to have a kid a couple of times. Now we are both excited to see the world through our future child's eyes.
+        </p>
+        <p>
+          For Mike, he had a bit of an epiphany when taking his grandma to a doctor's appointment, repeating things to her in his loud grandma voice to make sure she knew what was going on and sitting in waiting rooms with her, and he thought - this is on its face a really annoying thing to do, but somehow, I am not annoyed because I get to be here with my grandma, and I know how important that is to her. So taking care of friends and family seemed exactly like what he should be doing in this next chapter.
+        </p>
+        <p>
+          We are due April 5. Here's a sonogram from a while back, conveniently annotated by the ultrasound tech.
+        </p>
+        <p>
+          <a data-open="baby">
+            <img data-interchange="[{{ site.baseurl }}/img/baby_xbjpew/baby_xbjpew_c_scale,w_634.jpg, small], [{{ site.baseurl }}/img/baby_xbjpew/baby_xbjpew_c_scale,w_859.jpg, medium], [{{ site.baseurl }}/img/baby_xbjpew/baby.jpg, large]" >
+          </a>
         </p>
       </div>
       {% include attribution-us.html %}
