--- a/_posts/2018-12-21-beard.html
+++ b/_posts/2018-12-21-beard.html
@@ -49,7 +49,7 @@ permalink: /beard/post.html
     <div class="cell small-12 medium-6 large-6 speech-container voice-kepler">
       <div class="speech">
         <p>
-          meow
+          I've been rubbing my face on this beard trying to get it to smell like my tuna breath, but I'm not sure if it's working.
         </p>
       </div>
       {% include attribution-kepler.html %}
@@ -57,7 +57,10 @@ permalink: /beard/post.html
     <div class="cell small-12 medium-6 large-6 speech-container voice-emandm">
       <div class="speech">
         <p>
-          This is the first big project we’re doing with the inheritance from my late Grandma Rice. We realized as we were going through her old yearbook that her friends called her Spigot (or Spiggott) since her last name at the time was Fawcett. It also seemed that one friend filled in an entire page of her yearbook. Seeing that yearbook revealed a side of her that I never knew. I remember her as chatty, full of energy and optimistic, but also somewhat proper. She got dressed up and went to her Presbyterian church every Sunday. Even in her last years, she and her friends in her retirement home got dressed up quite fancy to go to dinner with each other. I had a hard time imagining anyone calling her Spiggott. During our search for a new kitchen faucet, I thought of her often.
+          In all the hustle and bustle this fall, Mike stopped shaving. At first it was a symptom of our bathroom sink having turned into a kitchen sink. But some friends commented that it looked good and why not grow it out for the winter? Mike has always thought he couldn’t grow a sufficient beard, but figured it was as good a time as any to try. So here we are. Mike with hair on his face.
+        </p>
+        <p>
+          In practice, this facial fuzz has let Mike get away with shaving less frequently, but it has also been a bit annoying having things get stuck in it. It's probably time to shave after we get back home from holiday travels.
         </p>
       </div>
       {% include attribution-us.html %}
