--- a/_posts/2018-12-23-porch.html
+++ b/_posts/2018-12-23-porch.html
@@ -49,7 +49,7 @@ permalink: /porch/post.html
     <div class="cell small-12 medium-6 large-6 speech-container voice-kepler">
       <div class="speech">
         <p>
-          This guy, Jay kept coming in the house with his work boots. I wasn't amused, so I gave him my death stare to force him outside of the house. It worked, and he spent a few days outside the front door. Here's what my view looked like before he started.
+          This guy, Jay, kept coming in the house with his work boots. I wasn't amused, so I gave him my death stare to force him outside of the house. It worked, and he spent a few days outside the front door. Here's what my view looked like before he started.
         </p>
         <p>
           <img data-interchange="[{{ site.baseurl }}/img/front-entry-inside_qazksr/front-entry-inside_qazksr_c_scale,w_645.jpg, small], [{{ site.baseurl }}/img/front-entry-inside_qazksr/front-entry-inside_qazksr_c_scale,w_896.jpg, medium], [{{ site.baseurl }}/img/front-entry-inside_qazksr/front-entry-inside_qazksr_c_scale,w_1079.jpg, large]" >
